--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+pysqlite3-binary
+langchain
+langchain-community
 openai
+chromadb
+unstructured
+sentence-transformers
+faiss-cpu
+tiktoken
+pypdf
+loguru
+docx2txt
